--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age</title>
 </head>
+<!--Mehdi khar kosde afghani kon-->
 <body>
     <div id="countdown"></div>
 
